Menu version tablette, correction header couleur

--- a/layout/_header.scss
+++ b/layout/_header.scss
@@ -7,6 +7,8 @@ header {
         margin-bottom: 3px;
         padding-bottom: 8px;
         padding-top: 8px;
+        margin-top: 0px;
+        padding-top: $msr-intermediate;
         @include shd-regular;
         @include desktop-only{
             box-shadow: unset;
