--- a/utils/_mixins.scss
+++ b/utils/_mixins.scss
@@ -4,7 +4,7 @@
 }
 
 @mixin width-standard{
-    width:90%;
+    width:92%;
     margin:auto;
 }
 
